Add minor refactor